# Fastapi_proj

./: .env  __init__.py  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
docs/: Dockerfile  build.sh  conf.py  index.rst
migrations/versions/: 64702d787dfe_init.py  8ae636dc5c29_init.py  993a7afd2af4_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_contacts.py  test_unit_repository_contacts.py
