[tool.poetry]
name = "fastapi_proj"
version = "0.1.0"
description = "Fastapi"
authors = ["Alex-Tsyb <tsybrovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
SQLAlchemy = "^2.0.29"
pydantic = "^2.7.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
libgravatar = "^1.0.4"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
